Added link to github

--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@
         </div>
       </div>
       <div class="source">
-        <a href=" " class="link"> Open-source code</a> by Antonia Englert
+        <a
+          href="https://github.com/antoniapiae/simple-weather-application"
+          class="link"
+        >
+          Open-source code</a
+        >
+        by Antonia Englert
       </div>
     </div>
     <script src="script.js"></script>
