--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
         <a
           href="https://github.com/antoniapiae/simple-weather-application"
           class="link"
+          target="_blank"
+          rel="noopener"
         >
           Open-source code</a
         >
